--- a/package.json
+++ b/package.json
@@ -19,5 +19,21 @@
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typings": "^1.4.0"
+  },
+  "dependencies": {
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "@angular/upgrade": "^2.1.0",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.6",
+    "systemjs": "^0.19.39",
+    "zone.js": "^0.6.25"
   }
 }
