Created modular code
Signed-off-by: Ramesh Mhetre <mhetreramesh@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
 		"removeComments": false,
 		"noImplicitAny": false,
 		"outDir": "dist"
-	}
+	},
+	"filesGlob": [
+    "**/*.ts",
+    "**/*.tsx",
+    "!node_modules/**",
+    "node_modules/@types/**/*.d.ts"
+  ]
 }
